[project]
name = "ycnodes"
description = "A collection of image processing extension nodes for ComfyUI."
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["torch", "numpy", "pillow", "opencv-python"]

[project.urls]
Repository = "https://github.com/yichengup/ComfyUI-YCNodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-YCNodes"
Icon = ""
